--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 </head>
 
 <body>
-
+  <h1>To Do List 2022</h1>
+  <form id="new-task-form">
+    <input type="text" name="task-input" id="task-input" placeholder="Add New Task">
+    <input type="submit" id="submit-task" value="Add Task">
+  </form>
+  <main>
+    <section class="task-list">
+      <h2>Tasks</h2>
+      <div class="task">
+        <div class="content">
+          <input type="text" class="text" value="Task" readonly>
+        </div>
+        <div class="actions">
+          <button class="edit">Edit</button>
+          <button class="delete">Delete</button>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
