started styling, added js file

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To Do List 2022</title>
   <link rel="stylesheet" href="main.css">
+  <script src="app.js" defer></script>
 </head>
 
 <body>
-  <h1>To Do List 2022</h1>
-  <form id="new-task-form">
-    <input type="text" name="task-input" id="task-input" placeholder="Add New Task">
-    <input type="submit" id="submit-task" value="Add Task">
-  </form>
+  <header>
+    <h1>To Do List 2022</h1>
+    <form id="new-task-form">
+      <input type="text" name="task-input" id="task-input" placeholder="Add New Task">
+      <input type="submit" id="submit-task" value="Add Task">
+    </form>
+  </header>
   <main>
     <section class="task-list">
       <h2>Tasks</h2>
