--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="task-list">
       <h2>Tasks</h2>
       <div id="tasks">
-        <div class="task">
+        <!-- <div class="task">
           <div class="content">
             <input type="text" class="text" value="Task" readonly>
           </div>
@@ -30,7 +30,7 @@
             <button class="edit">Edit</button>
             <button class="delete">Delete</button>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
   </main>
